# vibrance

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  main.qml
resources/: resources.qrc
src/: album_art.rs  controls.rs  library.rs  lyrics.rs  main.rs  player.rs  preferences.rs  resources.rs
src/components/: icon.rs  mod.rs  player.rs  sidebar.rs  sidebar_item.rs  track_list.rs  track_list_item.rs
src/cpp/: mainwindow.cpp  mainwindow.h  mediaplayer.cpp  mediaplayer.h  navigationitem.cpp  navigationitem.h  qlistwidgeta.cpp  qlistwidgeta.h  trackitem.cpp  trackitem.h  volumeflyout.cpp  volumeflyout.h  window.cpp  window.h
src/providers/: local.rs  mod.rs  qq.rs  youtube.rs
src/views/: home.rs  lyrics.rs  mod.rs  search.rs
themes/: tokyonight.json  twilight.json
