[package]
name = "vibrance"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
cxx = "1.0"
dirs = "6.0.0"
lazy_static = "1.5.0"
lofty = "0.22.4"
lrc = "0.1.8"
once_cell = "1.21.3"
rayon = "1.10.0"
rodio = "0.20.1"
rustypipe = "0.11.4"
serde = "1.0.219"
serde_json = "1.0.140"
souvlaki = "0.8.2"
ulid = "1.2.1"

[build-dependencies]
cxx-build = { version = "1.0.95", features = ["parallel"] }
glob = "0.3.2"
winres = "0.1.12"
