[package]
name = "vibrance"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = "0.4.42"
dirs = "6.0.0"
futures = "0.3.31"
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
lazy_static = "1.5.0"
lofty = "0.22.4"
lrc = "0.1.8"
once_cell = "1.21.3"
raw-window-handle = "0.6.2"
regex = "1.12.2"
reqwest = { version = "0.12.25", default-features = false, features = ["rustls-tls-native-roots"] }
rodio = { git = "https://github.com/RustAudio/rodio.git", branch = "feat/comprehensive-seeking-and-bit-depth" }
rust-embed = "8.9.0"
rustypipe = { git = "https://codeberg.org/infiniwave/rustypipe.git", default-features = false, features = ["rustls-tls-native-roots"] }
serde = "1.0.228"
serde_json = "1.0.145"
souvlaki = { git = "https://github.com/Sinono3/souvlaki.git", branch = "0.9" }
tokio = { version = "1.48.0", default-features = false, features = ["rt-multi-thread", "macros"] }
ulid = "1.2.1"

[build-dependencies]
winres = "0.1.12"
